--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         image: "redis:latest"
         user: "1000:1000"
         ports:
-            - "6379:6379"
+            - "127.0.0.1:6379:6379"
         volumes:
             - "./data/redis:/data"
+        command: redis-server --requirepass password
